(bitcoin) fix vertical alignment

--- a/share/spice/bitcoin/bitcoin.css
+++ b/share/spice/bitcoin/bitcoin.css
@@ -4,23 +4,24 @@
 
 .zci--bitcoin .bitcoin__blk {
     vertical-align: top;
-    padding: 1em 10%;
+    padding: 1em 7%;
     margin: 0.25em;
     background-color: #E9E9E9;
     background-color: rgba(150,150,150,0.1);
     border-radius: 3px;
+	line-height: 50px;
+}
+.zci--bitcoin .bitcoin__title,
+.zci--bitcoin .bitcoin__price  {
+	vertical-align: middle;
+	display: inline-block;
 }
 
 .zci--bitcoin .bitcoin__title {
-    font-size: 15px;
-    position: relative;
-    top: 18px;
-    padding-right: 15%;
+	font-size: 15px;
 }
 
 .zci--bitcoin .bitcoin__price {
-    position: relative;
-    top: 6px;
     font-size: 35px;
     float: right;
 }
@@ -35,24 +36,25 @@
 }
 
 @media screen and (max-width: 680px) {
-    .zci--bitcoin .bitcoin__price {
+    .zci--bitcoin .bitcoin__blk {
+		line-height: 24px;
+	}
+	.zci--bitcoin .bitcoin__price {
 	font-size: 24px;
-    }
-
-    .zci--bitcoin .bitcoin__title {
-	top: 9px;
     }
 
     .zci--bitcoin .zci__body {
 	padding-left: 0.8em;
     }
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 460px) {
+	.zci--bitcoin .bitcoin__blk {
+		line-height: 1;
+	}
 	.zci--bitcoin .bitcoin__price {
 		float: none;
 		display: block;
 		text-align: left;
-		line-height: 1;
 	}
 	.zci--bitcoin .bitcoin__title {
 		top: 0;
@@ -60,7 +62,11 @@
 		font-size: 13px;
     }
 }
-
+@media screen and (max-width: 380px) {
+	.zci--bitcoin .bitcoin__price {
+		font-size: 21px;
+	}
+}
 .is-mobile .zci--bitcoin .zci__body {
 	padding-left: 0.25em;
 }
